# TRX

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Dockerfile  GAMEFLOW.md  Makefile  README.md  SECRETS.md  TR1Main.json  Tomb1Main.json  Tomb1Main.json5  Tomb1Main_gameflow.json5  Tomb1Main_gameflow_ub.json5  build  compile  entrypoint.sh  format  ida_import.py  justfile  main.c  meson.build  meson.options
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build_docker.yml  build_game.yml  build_game_macos.yml  build_macos.yml  ci.yml  comment_build.yml  job_build_game_macos.yml  job_build_tr1.yml  job_build_tr1_macos.yml  job_build_tr2.yml  job_release.yml  lint.yml  pr_builds.yml  prerelease.yml  release.yml  release_tr1.yml  release_tr2.yml
cfg/: Tomb1Main.json5  Tomb1Main_gameflow.json5  Tomb1Main_gameflow_ub.json5
data/: installer icon.ai  version.rc
data/mac/: Info.plist
data/tr1/: logo.ai
data/tr2/: icon.psd  logo.ai  version.rc
docker/: Dockerfile  entrypoint.sh  meson_linux_mingw32.txt
docker/config/: Dockerfile  entrypoint.sh
docker/game/: Dockerfile  entrypoint.sh
docker/game-linux/: Dockerfile  entrypoint.sh
docker/game-win/: Dockerfile  entrypoint.sh
docker/installer/: Dockerfile  entrypoint.sh
docs/: CONTRIBUTING.md  ida_types.h  ida_variables.txt  progress.txt  render_progress  update_function_names  update_functions
docs/tr1/: CHANGELOG.md  (+3 more)
lib/: .clang-format  .gitignore
scripts/: analyze_memleaks  analyze_memleaks.patch  generate_icons  generate_init  generate_version  ida_import.py  render_progress  sort_imports
src/: args.c  args.h  config.c  config.h  config_map.c  config_map.def  config_map.h  const.h  data.h  dynarray.c  dynarray.h  filesystem.c  filesystem.h  func.c  func.h  generate_init.py  init.c  init.h  inject.c  inject.h  inject_util.c  inject_util.h  json.c  json.h  json_utils.c  json_utils.h  log.c  log.h  main.c  memory.c  memory.h  mod.c  mod.h  shared  strings.c  strings.h  struct.h  types.h  util.c  util.h  (+1 more)
src/libtrx/: benchmark.c  enum_map.c  event_manager.c  filesystem.c  log.c  log_linux.c  log_unknown.c  log_windows.c  memory.c  meson.build  meson.options  vector.c  virtual_file.c
src/libtrx/config/: common.c  file.c
src/libtrx/engine/: audio.c  audio_internal.h  audio_sample.c  audio_stream.c  image.c  video.c
src/libtrx/game/: backpack.c  game_string.c  items.c
src/libtrx/game/console/: common.c  history.c  internal.h
src/libtrx/game/console/cmd/: config.c  die.c  end_level.c  exit_game.c  exit_to_title.c  flipmap.c  fly.c  give_item.c  heal.c  kill.c  load_game.c  play_demo.c  play_level.c  pos.c  save_game.c  set_health.c  sfx.c  teleport.c
src/libtrx/game/objects/: common.c  names.c  vars.c
src/libtrx/game/rooms/: common.c
src/libtrx/game/ui/: common.c  events.c
src/libtrx/game/ui/widgets/: console.c  prompt.c  spacer.c  stack.c
src/libtrx/gfx/: context.c  screenshot.c
src/libtrx/gfx/2d/: 2d_renderer.c  2d_surface.c
src/libtrx/gfx/3d/: 3d_renderer.c  vertex_stream.c
src/libtrx/gfx/gl/: buffer.c  program.c  sampler.c  texture.c  vertex_array.c
src/libtrx/gfx/renderers/: fbo_renderer.c  legacy_renderer.c
src/libtrx/include/libtrx/: benchmark.h  bson.h  config.h  enum_map.h  event_manager.h  filesystem.h  json.h  log.h  memory.h  strings.h  utils.h  vector.h  virtual_file.h
src/libtrx/include/libtrx/config/: common.h  file.h  map.h  option.h
src/libtrx/include/libtrx/engine/: audio.h  image.h  video.h
src/libtrx/include/libtrx/game/: anims.h  backpack.h  clock.h  collision.h  const.h  creature.h  effects.h  game.h  game_string.def  game_string.h  input.h  items.h  lot.h  math.h  random.h  rooms.h  savegame.h  shell.h  sound.h  text.h  types.h
src/libtrx/include/libtrx/game/console/: common.h  extern.h  history.h
src/libtrx/include/libtrx/game/console/cmd/: config.h  die.h  end_level.h  exit_game.h  exit_to_title.h  flipmap.h  fly.h  give_item.h  heal.h  kill.h  load_game.h  play_demo.h  play_level.h  pos.h  save_game.h  set_health.h  sfx.h  teleport.h
src/libtrx/include/libtrx/game/effects/: types.h
src/libtrx/include/libtrx/game/gameflow/: common.h  types.h
src/libtrx/include/libtrx/game/items/: common.h  const.h  enum.h  types.h
src/libtrx/include/libtrx/game/lara/: cheat.h  common.h  const.h  enum.h  enum_tr1.h  enum_tr2.h  misc.h  types.h
src/libtrx/include/libtrx/game/objects/: common.h  ids.def  ids.h  ids_tr1.def  ids_tr2.def  names.def  names.h  names_tr1.def  names_tr2.def  types.h  vars.h
src/libtrx/include/libtrx/game/rooms/: common.h  const.h  enum.h  types.h
src/libtrx/include/libtrx/game/sound/: common.h  ids.h
src/libtrx/include/libtrx/game/ui/: common.h  events.h
src/libtrx/include/libtrx/game/ui/widgets/: base.h  console.h  label.h  prompt.h  spacer.h  stack.h  window.h
src/libtrx/include/libtrx/gfx/: common.h  config.h  context.h  renderer.h  screenshot.h
src/libtrx/include/libtrx/gfx/2d/: 2d_renderer.h  2d_surface.h
src/libtrx/include/libtrx/gfx/3d/: 3d_renderer.h  vertex_stream.h
src/libtrx/include/libtrx/gfx/gl/: buffer.h  gl_core_3_3.h  program.h  sampler.h  texture.h  utils.h  vertex_array.h
src/libtrx/include/libtrx/gfx/renderers/: fbo_renderer.h  legacy_renderer.h
src/libtrx/include/libtrx/strings/: common.h  fuzzy_match.h
src/libtrx/json/: bson_parse.c  bson_write.c  json_base.c  json_parse.c  json_write.c
src/libtrx/strings/: common.c  fuzzy_match.c
src/libtrx/subprojects/: dwarfstack.wrap  uthash.wrap
src/libtrx/subprojects/packagefiles/dwarfstack/: meson.build
test/: main.c  test.h  test_config.c  test_config.h  test_gameflow.c  test_gameflow.h
tools/: additional_lint  analyze_memleaks  analyze_memleaks.patch  check_config_defaults  ffmpeg_flags.txt  generate_icon  generate_icons  generate_images  generate_init  generate_rcfile  generate_version  get_version  ida_import.py  inspect_save  libtrx  output_current_changelog  output_release_name  release  sort_imports  update_functions  update_gameflow
(+1927 files in other folders)
